--- a/templates/template_wedding_9/index.html
+++ b/templates/template_wedding_9/index.html
@@ -258,7 +258,7 @@
                                                 </div>
                                                 <div class="col-lg-5 mtext-center">
                                                     <p>
-                                                        The Dresscode Will Be<br /><br />
+                                                        The Dresscode Will Be :<br /><br />
                                                         <b>Simple Minimal Formal Attire</b><br />
                                                         No Complicated Sequence,<br />
                                                         Plain Sophisticated look
@@ -287,10 +287,10 @@
         <section id="accommodation">
             <div class="container-fluid">
                 <div class="row">
-                    <div class="order-2 order-lg-1 col-lg-6 pl-lg-0 pr-lg-0">
+                    <div class="order-2 order-lg-1 col-lg-6 pl-lg-0 pr-lg-0 border-bottom-gray">
                         <img data-aos="zoom-out" class="img-fluid w-lg-100p" src="images/images-06.png" />
                     </div>
-                    <div class="order-1 order-lg-2 col-lg-6 pt-m-15p pb-m-15p pl-m-10p pr-m-10p pt-lg-10p pb-lg-10p pl-lg-5p pr-lg-5p">
+                    <div class="order-1 order-lg-2 col-lg-6 pt-m-15p pb-m-15p pl-m-10p pr-m-10p pt-lg-10p pb-lg-10p pl-lg-5p pr-lg-5p border-bottom-gray">
                         <h5 data-aos="fade-left" class="mb-lg-5p">
                             ACCOMODATION:<br />
                             THE CONFIDANTE
@@ -449,7 +449,7 @@
                                                 <input type="submit" class="button-default" data-toggle="modal" data-target="#ebrochure" value="SUBMIT" />
                                                 <img class="img-fluid" src="images/arrow-02.png" />
                                             </div>
-                                            <a class="button-default" href="invitation.pdf" target="_blank">DOWNLOAD INVITATION <img class="img-fluid" src="images/form-03.png" /></a>
+                                            <a class="button-default" href="invitation.pdf" target="_blank">Download Invitation <img class="img-fluid" src="images/form-03.png" /></a>
                                             <div class="button-wrap d-none d-lg-block">
                                                 <input type="submit" class="button-default" data-toggle="modal" data-target="#ebrochure" value="SUBMIT" />
                                                 <img class="img-fluid" src="images/arrow-02.png" />
