--- a/templates/template_wedding_8/index.html
+++ b/templates/template_wedding_8/index.html
@@ -82,7 +82,7 @@
                     </div>
                     <div data-aos="fade-up" class="col-lg-5 pt-m-0 pb-m-15p pl-m-10p pr-m-10p pt-lg-5p pb-lg-5p pl-lg-5p pr-lg-5p">
                         <div class="boxc">
-                            <h5>Our Story</h5>
+                            <h3>Our Story</h3>
                             <p>
                                 We got each other by the hands for over 6 years now, and we've been through so much together, to the point where each of us can’t live without one another. We met at the famous romantic city in Paris, France. Now we realized how many things happen throughout the years we’ve been together. And we decided to tie the knot and seal our bond together in a sacred ceremony as well as a wedding party to celebrate our special day.
                             </p>
@@ -101,8 +101,8 @@
                         <h3>Our Venue</h3>
                     </div>
                     <div data-aos="fade-right" class="order-2 order-lg-1 col-lg-4 mb-m-0 pb-m-20p pl-m-10p pr-m-10p mb-lg-5p pl-lg-5p">
-                        <h5 class="font-green">Ceremony</h5>
-                        <p>
+                        <h5 class="font-green ml-lg-5">Ceremony</h5>
+                        <p class="ml-lg-5">
                             Saturday, <b>22th July 2020</b><br />
                             <b>11.00 am</b><br />
                             —<br />
@@ -119,7 +119,7 @@
                     <div data-aos="flip-right"  class="order-3 order-lg-3 col-lg-8 pb-m-10p pl-m-10p pr-m-10p pl-lg-5p">
                         <img class="img-fluid images2" src="images/images-04.png" />
                     </div>
-                    <div data-aos="fade-left" class="order-4 order-lg-4 col-lg-4 pb-m-20p pl-m-10p pr-m-10p pl-lg-3p pr-lg-5p">
+                    <div data-aos="fade-left" class="order-4 order-lg-4 col-lg-4 pb-m-20p pl-m-10p pr-m-10p pl-lg-3p pr-lg-3p">
                         <h5 class="font-green">Reception</h5>
                         <p>
                             Saturday, <b>22th July 2020</b><br />
@@ -163,34 +163,24 @@
         </section>
         <!-- Section Gallery -->
         <section id="gallery">
-            <div class="container-fluid">
-                <div class="row">
-                    <div class="col-lg-12 pt-m-20p pt-lg-5p pb-lg-5p pl-lg-0 pr-lg-0">
-                        <div class="wrap">
-                            <div class="line boxc"></div>
-                            <a class="button-default boxc" href="">VIEW GALLERY</a>
-                            <img class="img-fluid boxc motif1" src="images/icon-03.png" />
-                            <div class="box images1">
-                                <img data-aos="fade-down" data-aos-offset="-100" class="img-fluid" src="images/images-06.png" />
-                            </div>
-                            <div class="box images2">
-                                <img data-aos="fade-left" class="img-fluid" src="images/images-07.png" />
-                            </div>
-                            <div class="box images3">
-                                <img data-aos="fade-up" data-aos-offset="-100" class="img-fluid" src="images/images-08.png" />
-                            </div>
-                            <div class="box images4">
-                                <img data-aos="fade-right" data-aos-offset="-200" class="img-fluid" src="images/images-09.png" />
-                            </div>
-                            <div class="box images5">
-                                <img data-aos="fade-up" data-aos-offset="-200" class="img-fluid" src="images/images-10.png" />
-                            </div>
-                            <img class="img-fluid boxc motif2" src="images/icon-04.png" />
-                            <img class="img-fluid boxc motif3" src="images/icon-05.png" />
-                            <div class="box images6">
-                                <img data-aos="fade-right" data-aos-offset="-400" class="img-fluid" src="images/images-11.png" />
-                            </div>
-                        </div>
+            <div class="container-fluid pl-lg-5 py-lg-5">
+                <div class="row my-lg-5">
+                    <div class="col-lg-6 pl-lg-5">
+                        <img src="images/gallery-new-content-03.jpg" alt="">
+                        <h3 class="my-lg-5 d-inline-block">
+                            Our Memories
+                        </h3>
+                        <p class="text-gray">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br>
+                            Sed fermentum lorem dignissim sapien dapibu
+                        </p>
+                    </div>
+                    <div class="image-pos">
+                    <img src="images/gallery-new-content-05.jpg" alt="">
+                    </div>
+                    <div class="col-lg-4 offset-lg-2 text-center">
+                        <img src="images/gallery-new-content-04.jpg" alt="">
+                        <img class="mt-5" src="images/gallery-new-content-06.jpg" alt="">
                     </div>
                 </div>
             </div>
@@ -232,7 +222,24 @@
                                 </div>
                                 <div class="form-group col-lg-6 mb-lg-0 pl-m-5 pl-lg-5p">
                                     <label for="your-guest">Number of Guest</label>
-                                    <input type="text" class="form-control" id="your-guest" name="your-guest" required>
+                                    <div class="row">
+                                        <div class="col-lg-2 col-1">
+                                            <a role="button" id="step-decrement" class="btn btn-default mt-1" aria-label="remove 1" aria-labelledby="step-decrement label-text">
+                                                <i class="fa fa-chevron-left text-gray"></i>
+                                            </a>
+                                        </div>
+                                        <div class="col-lg-3 col-2 pl-0">
+                                            <input class="w-100 form-control bg-white text-center" disabled type="number" name="qty" id="spinner" value="1" aria-live="polite" tabindex="-1" aria-labelledby="label-text">
+                                        </div>
+                                        <div class="col-lg-2 col-1">
+                                            <a role="button" id="step-increment" class="btn btn-default  mt-1" aria-label="add 1" aria-labelledby="step-increment label-text">
+                                            <i class="fa fa-chevron-right text-gray"></i>
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="form-group col-lg-6">
+                                    
                                 </div>
                                 <div class="form-group col-lg-12 pt-m-10p mb-m-0 pt-lg-5p text-right">
                                     <button type="submit" class="button-default">Submit</button><br><br>
