--- a/templates/template_wedding_8/style-wedding-8.css
+++ b/templates/template_wedding_8/style-wedding-8.css
@@ -37,6 +37,9 @@
 		font-weight: unset !important;
 	    font-family: "EBGaramond Bold";
 	}
+	.pl-lg-6p{
+		padding-left: 6%;
+	}
 	.container-fluid{position: relative;}
 	.rlgu{right: unset !important;}
 	.ts{text-shadow: 2px 2px 3px rgba(74,74,74,0.65);}
@@ -230,10 +233,13 @@
         #ourstory .boxc{width: 75%;}
         #ourstory .boxc p{
             font-family: "EBGaramond Italic";
-            font-size: 16px !important;
+            font-size: 18px !important;
             line-height: 40px !important;
             color: #706F6F;
-        }
+		}
+		#ourstory h3{
+			color: #075561;
+		}
     /* Venue */
         #venue{padding-bottom: 20%;}
         #venue .motif1{
@@ -285,13 +291,13 @@
             padding: 2% 3%;
             bottom: 3%;
             right: 5%;
-            width: 38%;
+            width: 40%;
             background: #075561;
         }
         #accommodation .wrap p{
             font-family: "EBGaramond Regular";
-            font-size: 16px !important;
-            line-height: 25px !important;
+            font-size: 18px !important;
+			line-height: 28px !important;
             color : #F6F5F3;
         }
         #accommodation .wrap .note p{
@@ -301,7 +307,7 @@
         #accommodation .img-title{
         	position: absolute;
         	top: 9.5%;
-			left: 13.5%;
+			left: 11.5%;
 			height: 77vh;
         }
         #accommodation .rot{
@@ -334,79 +340,24 @@
             width: 83%;
         }
     /* Gallery */
-        #gallery .wrap{
-            position: relative;
-            width: 100%;
-            height: 150vh;
-        }
-        #gallery .wrap .button-default{
-            width: 25%;
-            text-align: center;
-        }
-        #gallery .wrap .line{
-            margin: unset;
-            right: unset;
-            width: 50%;
-            height: 2px;
-            background: #cdae8a;
-        }
-        #gallery .wrap .box{
-            position: absolute;
-            margin: 0 auto;
-            top: 50%;
-            left: 0;
-            right: 0;
-            transform: translateY(-50%);
-            width: 33%;
-            text-align: center;
-        }
-        #gallery .wrap .box img{
-            width: 100%;
-        }
-        #gallery .wrap .images1{
-            top: 25%;
-            right: 67%;
-            width: 28%;
-        }
-        #gallery .wrap .images2{
-            top: 0;
-            transform: unset;
-            width: 13%;
-        }
-        #gallery .wrap .images3{
-            top: 20%;
-            left: 70%;
-            width: 30%;
-        }
-        #gallery .wrap .images4{
-            top: 64%;
-            right: 70%;
-            width: 17%;
-        }
-        #gallery .wrap .images5{
-            top: 83%;
-            left: 17%;
-        }
-        #gallery .wrap .images6{
-            top: 52.7%;
-            left: 70%;
-            width: 16%;
-        }
-        #gallery .wrap .motif1{
-            top: 3%;
-            right: 59%;
-            width: 29%;
-        }
-        #gallery .wrap .motif2{
-            top: 71%;
-            left: -19%;
-            width: 8%;
-        }
-        #gallery .wrap .motif3{
-            top: 59%;
-            left: 54%;
-            width: 8%;
-        }
+		#gallery h3{
+			display: inline;
+			padding: 15px 50px;
+			color: #075561;
+			border: 1px solid #cdae8a;
+		}
+		#gallery p{
+			font-family: "EBGaramond Italic";
+			font-size: 18px !important;
+			line-height: 40px !important;
+			color: #706F6F;
+		}
+		#gallery .image-pos{
+			position: absolute;
+			bottom: 122px;
+			left: 54%;
+			transform: translate(-50%);
+		}
     /* RSVP */
     	#rsvp .motif{
     		position: absolute;
@@ -421,7 +372,8 @@
         }
         #rsvp .title h2{
             margin-bottom: 0;
-            text-transform: uppercase;
+			text-transform: uppercase;
+			color: #075561;
         }
         #rsvp .title .line{
             margin: unset;
@@ -449,7 +401,12 @@
             background: transparent;
             border: 1px solid #075561;
             border-radius: 0;
-        }
+		}
+		#rsvp form input[type="number"] {
+			-moz-appearance: textfield;
+			-webkit-appearance: textfield;
+			background-color: transparent !important;
+		}
         #rsvp form .box{border: 1px solid #075561;}
         #rsvp form .box input{margin-bottom: 0;}
         #rsvp form input[type=radio] {
@@ -496,7 +453,7 @@
 	        	transform: unset;
 	        	width: 100%;
 	        }
-	        #ourstory .boxc p{line-height: 26px !important;}
+			#ourstory .boxc p{line-height: 26px !important;}
         /* Venue */
 	        #venue .motif1{display: none;}
 	        #venue .motif2{
@@ -542,57 +499,7 @@
 	        	object-fit: cover;
 	        }
         /* Gallery */
-	        #gallery .wrap{height: 120vh;}
-	        #gallery .wrap .button-default{
-	        	font-size: 16px !important;
-	        	line-height: 20px !important;
-	        	letter-spacing: 4.4px;
-	        	width: 65%;
-	        }
-	        #gallery .wrap .images1{
-	        	top: 24%;
-	        	left: 7%;
-	        	width: 40%;
-	        }
-	        #gallery .wrap .images2{
-	        	left: 45%;
-	        	width: 25%;
-	        }
-	        #gallery .wrap .images3{
-	        	top: 32%;
-	        	left: 45%;
-	        	width: 40%;
-	        }
-	        #gallery .wrap .images4{
-	        	top: 87%;
-	        	right: 40%;
-	        	width: 32%;
-	        }
-	        #gallery .wrap .images5{
-	        	top: 68%;
-	        	left: -46%;
-	        	width: 40%;
-	        }
-	        #gallery .wrap .images6{
-	        	top: 80%;
-	        	left: 53%;
-	        	width: 33%;
-	        }
-	        #gallery .wrap .motif1{
-	        	top: 11%;
-	        	width: 52%;
-	        	left: 0%;
-	        }
-	        #gallery .wrap .motif2{
-	        	top: 96%;
-	        	left: -15%;
-	        	width: 15%;
-	        }
-	        #gallery .wrap .motif3{
-	        	top: 85%;
-	        	left: 20%;
-	        	width: 15%;
-	        }
+	        
         /* RSVP */
 	        #rsvp .motif{
 	        	top: -9%;
