--- a/templates/template_birthday_2/wishlist.html
+++ b/templates/template_birthday_2/wishlist.html
@@ -19,82 +19,6 @@
     <link rel="stylesheet" href="../../node_modules/owl.carousel/dist/assets/owl.theme.default.min.css">
 </head>
 <body>
-    <div class="container-fluid nav-birthday-2">
-        <div class="row d-none d-lg-flex">
-            <div class="col-lg-5">
-                
-            </div>
-            <div class="col-lg-7 py-lg-4 text-right d-none d-lg-block">
-               <ul class="list-unstyled d-inline">
-                   <li>
-                       <a href="index.html">
-                            HOME
-                       </a>
-                   </li>
-                   <li>
-                       <a href="index.html">
-                            ABOUT
-                       </a>
-                   </li>
-                   <li>
-                       <a href="index.html">
-                            DATE & PLACE
-                       </a>
-                   </li>
-                   <li>
-                       <a href="index.html">
-                            RSVP
-                       </a>
-                   </li>
-                   <li>
-                       <a href="#">
-                            WISH LIST
-                       </a>
-                   </li>
-               </ul> 
-            </div>
-        </div>
-        <div class="d-lg-none">
-          <div class="col-lg-11">
-            <h3 class="text-gray text-right mt-1">
-                <i class="fa fa-bars"></i>
-            </h3>
-          </div>
-          <div class="side-nav">
-                        <div class="close-div text-right p-3">
-                          <h3 class="text-gray">
-                            <i class="fa fa-times" aria-hidden="true"></i>
-                          </h3>
-                        </div>
-                        <ul class="list-unstyled">
-                        <li>
-                       <a href="index.html">
-                            HOME
-                       </a>
-                   </li>
-                   <li>
-                       <a href="index.html">
-                            ABOUT
-                       </a>
-                   </li>
-                   <li>
-                       <a href="index.html">
-                            DATE & PLACE
-                       </a>
-                   </li>
-                   <li>
-                       <a href="index.html">
-                            RSVP
-                       </a>
-                   </li>
-                   <li>
-                       <a href="#">
-                            WISH LIST
-                       </a>
-                   </li>
-                    </div>
-        </div>
-    </div>
     <div class="container-fluid header-section-wishlist pt-lg-5">
         <div class="row">
             <div class="col-lg-4 offset-lg-1 pr-lg-0 pt-lg-5 pl-0">
@@ -109,39 +33,31 @@
                   Small Wishes
                 </h2>
               </div>
-              <div class="list-of">
-                <ul class="list-unstyled">
-                  <li>
-                    <a href="#" data-toggle="modal" data-target="#wishlist-submit">Scented Candle</a>
-                  </li>
-                  <li>
-                    <a href="#" data-toggle="modal" data-target="#wishlist-submit">Polaroid</a>
-                  </li>
-                  <li>
-                    <a href="#" data-toggle="modal" data-target="#wishlist-submit">Flamingo Slippers</a>
-                  </li>
-                  <li>
-                    <a href="#" data-toggle="modal" data-target="#wishlist-submit">Leather Coin Purse</a>
-                  </li>
-                  <li>
-                    <a href="#" data-toggle="modal" data-target="#wishlist-submit">Bath Bombs Kit</a>
-                  </li>
-                  <li>
-                    <a href="#" data-toggle="modal" data-target="#wishlist-submit">Others</a>
-                  </li>
-                </ul>
+              <div class="list-of pt-lg-5">
                 <p class="text-gray text-center pb-2">       
-                  Select one of the above list so others will not need to bring the<br>
-                  same gifts. However it is not mandatory for you to select<br>
-                  one from the list above.
+                  You can choose and select gift ideas from the list below so others will<br>
+                  not need to give the same gift.
                 </p>
                 <img class="mx-auto d-block my-lg-4" src="images/wishlist-list-of-divider-09.png">
                 <p class="text-gray text-center pt-2">
-                  Your presence is much more important and needed<br>
-                  for my birthday celebration!
+                  It is not mandatory to give things from this list. If you’re prefer to give<br>
+                  other gift please select the “others” option. Your presence is much more<br>
+                  important and needed.
                 </p>
               </div>
             </div>
+        </div>
+        <div class="row choose-one">
+          <div class="col-lg-7">
+            <div class="wrap-title">
+              <h1 class="text-alexa-grey font-allura">
+                Choose
+              </h1>
+              <h1 class="text-alexa-grey font-allura">
+                One!
+              </h1>
+            </div>
+          </div>
         </div>
     </div>
     <div class="container-fluid py-3 footer">
