--- a/templates/template_birthday_2/style-birthday-2.css
+++ b/templates/template_birthday_2/style-birthday-2.css
@@ -150,7 +150,7 @@
 	.rsvp-section h2:last-child{
 		font-size: 55px;
 		margin-top: -35px;
-		margin-left: 2em;
+		margin-left: 25.3%;
 	}
 	.rsvp-section input{
 		background: none !important;
@@ -165,15 +165,26 @@
 		padding: 10px 22px;
 		font-size: 19px;
 		display: inline-block;
+		transition: all .3s;
+	}
+	.rsvp-section .button-submit:hover{
+		border: 2px solid #768792;
+		color: #fff;
+		background-color: #768792;
 	}
 	.rsvp-section .link-rsvp{
 		border-bottom: 2px solid #fff;
 	}
-	.footer .link-footer{
+	.footer .link-footer, .button-wishlist{
 		border: 2px solid #808184;
 		color: #808184;
 		border-radius: 25px;
 		padding: 5px 17px;
+		transition: all .3s;
+	}
+	.footer .link-footer:hover, .button-wishlist:hover{
+		color: #fff;
+		background-color: #808184;
 	}
 	.header-section-wishlist{
 		background-image: url(images/bg-wishlist-header-02.jpg);
@@ -218,11 +229,17 @@
 		right: 2em;
 		top: 2em;
 	}
-	#step-increment{
-		position: absolute;
-		right: 0;
-		top: 0;
-    }
+	.choose-one{
+		height: 1000px;
+	}
+	.choose-one h1{
+		font-size: 125px;
+		text-shadow: 2px 2px 5px rgba(150, 150, 150, 0.4);
+	}
+	.choose-one h1:last-child{
+		margin-top: -70px;
+		margin-left: 40px;
+	}
 	@media screen and (max-width: 846px) {
 		p, a, label, th, td, li, input{
 			font-size: 9pt;
