--- a/templates/template_birthday_3/index.html
+++ b/templates/template_birthday_3/index.html
@@ -31,7 +31,6 @@
                         <li><a href="#about">ABOUT</a></li>
                         <li><a href="#dateandplace">DATE & PLACE</a></li>
                         <li><a href="#rsvp">RSVP</a></li>
-                        <li><a href="wishlist.html">WISH LIST</a></li>
                     </ul>
                 </div>
             </div>
@@ -50,7 +49,6 @@
                             <li><a href="#about">ABOUT</a></li>
                             <li><a href="#dateandplace">DATE & PLACE</a></li>
                             <li><a href="#rsvp">RSVP</a></li>
-                            <li><a href="wishlist.html">WISH LIST</a></li>
                         </ul>
                     </div>
             </div>
@@ -145,7 +143,8 @@
                                 </div>
                                 <div class="col-6 col-lg-6">
                                     <div class="box font-grey">
-                                        <p>Marina Village Baja Room 939 Quivira Way, San Diego California 92109</p>
+                                        <h5>Marina Village</h5>
+                                        <p>Baja Room 939 Quivira Way, San Diego California 92109</p>
                                     </div>
                                 </div>
                                 <div class="col-lg-12 info font-grey">
@@ -179,9 +178,9 @@
                         <label class="d-block mb-lg-2p">Are you attending the party?</label>
                         <div class="mb-m-5p mb-lg-4p">
                             <input type="radio" id="yes" name="gender" value="yes">
-                            <label class="radio mb-lg-0 mr-lg-10" for="yes">Yes</label>
+                            <label class="radio mb-lg-0 mr-lg-5 ml-lg-2" for="yes">Yes</label>
                             <input type="radio" id="no" name="gender" value="no">
-                            <label class="radio mb-lg-0" for="no">No</label>
+                            <label class="radio mb-lg-0 ml-lg-2" for="no">No</label>
                         </div>
                         <label class="d-block">Fill in your full name and contact lists</label>
                         <div class="row mb-lg-4p">
@@ -212,7 +211,7 @@
                     </form>
                     <div class="modal fade" id="ebrochure">
                         <div class="modal-dialog modal-dialog-centered modal-lg">
-                            <div class="modal-content">
+                            <div class="modal-content pb-5">
                                 <div class="container-fluid">
                                     <div class="row">
                                         <div class="col-lg-12 text-center pl-lg-0 pr-lg-0">
@@ -223,6 +222,11 @@
                                             <p class="font-bluesky font-lg-21"><b>See you at the celebration!</b></p>
                                             <div class="w-lg-75p ma-lg mb-lg-10p font-grey">
                                                 <p>Your presence on my celebration means a lot to me and my family. Cannot wait to see you there!</p>
+                                            </div>
+                                            <div class="col-lg-12">
+                                                <a class="button-bluesky text-white py-2 px-3" href="wishlist.html">
+                                                    Wishlist
+                                                </a>
                                             </div>
                                         </div>
                                     </div>
